--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="X" />
+            android:text="@string/text_versus" />
 
         <ImageView
             android:id="@+id/right_team_image"
