Implementando tela de detalhes da partida e finalizando app

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -24,6 +24,7 @@
                 android:id="@+id/image_place"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:fitsSystemWindows="true" />
 
             <com.google.android.material.appbar.MaterialToolbar
